--- a/Assignment32/My-website.html
+++ b/Assignment32/My-website.html
@@ -5,6 +5,8 @@
     <title>save Budget</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -43,12 +45,11 @@
 
     <aside>
         <h3>Did you know ?</h3>
-        <p> <em>Eating out can be expensive, but with a little planning, you can enjoy delicious meals without breaking the bank. Look for lunch specials, happy hour deals, and daily discounts to make the most of your dining experience.</em></p>
+        <p> <em>Eating out can be expensive, but with a little planning, you can enjoy delicious meals without breaking the bank.</em></p>
     </aside>
 
 </section>
     
-
     <p> what is the food you like the most ??</p>
     <ul class="ul">
         <li>Pizza</li>
@@ -59,34 +60,6 @@
         <li>Indian Food</li>
         <li>French Food??!! Come on! are u serious ??</li>
     </ul>
-
-
-
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <footer>
     &copy;All Rights Reserved 2001.
