--- a/Assignment32/My-website.html
+++ b/Assignment32/My-website.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>save Budget</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/styles/style.css">
+>
 
 </head>
 
@@ -27,7 +27,7 @@
 
    </header> 
 
-    <p class="intro">Set your budget, pick your craving, and discover the top-rated meals near you , from pizza to burgers to Asian cuisine.</p>
+    <p class="intro"><strong> your budget, pick your craving, </strong>  and discover the top-rated meals near you , from pizza to burgers to Asian cuisine.</p>
 
     <a href="https://i.ebayimg.com/images/g/WxIAAOSwPKxgz6E4/s-l1600.webp" class="center-link">Dont you know what 'food' mean ? click here</a> 
 
