--- a/Assignment32/My-website.html
+++ b/Assignment32/My-website.html
@@ -5,7 +5,10 @@
     <title>save Budget</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/styles/style.css">
->
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/img/favicon-Hamburger.png">
+
+
+
 
 </head>
 
