--- a/Assignment32/My-website.html
+++ b/Assignment32/My-website.html
@@ -40,7 +40,7 @@
     </nav>
 
     <section id="showcase">
-       <h2> “Find the Best Meals Within Your Budget / Anytime, Anywhere.”</h2>
+        <h2> “Find the Best Meals Within Your Budget / Anytime, Anywhere.”</h2>
         <p class="container"><strong> set your budget</strong>
             and discover the top-rated meals near you , from pizza to burgers to Asian cuisine.</h2>
 
@@ -84,6 +84,29 @@
 
     </article>
 
+    <table class="prices">
+        <tr>
+            <th>Cuisine</th>
+            <th>Price</th>
+        </tr>
+        <tr>
+            <td>Italian</td>
+            <td>from $15</td>
+        </tr>
+        <tr>
+            <td>Mexican</td>
+            <td>from $6</td>
+        </tr>
+        <tr>
+            <td>Asian</td>
+            <td>from $10</td>
+        </tr>
+        <tr>
+            <td>Midlle Eastern</td>
+            <td>from $8</td>
+        </tr>
+    </table>
+
 
 
 
@@ -108,6 +131,15 @@
         </form>
     </section>
 
+
+
+
+    <a href="https://www.instagram.com/" target="_blank" id="instagram-button">
+        <img src="img/instagram-logo.png.webp" alt="instagram" >
+
+    </a>
+
+    </a>
     <footer id="main-footer">
         &copy;All Rights Reserved 2001.
     </footer>
