--- a/Assignment32/My-website.html
+++ b/Assignment32/My-website.html
@@ -45,7 +45,7 @@
         <form class="search-form">
 
             <!-- Budget -->
-            <select name="budget" required>
+            <select name="budget">
                 <option value="">Select Budget</option>
                 <option value="5-10">$5 - $10</option>
                 <option value="10-15">$10 - $15</option>
@@ -55,16 +55,21 @@
             </select>
 
             <!-- Cuisine Type -->
-            <select name="cuisine" required>
-                <option value="">Select Cuisine</option>
+            <select name="select type">
+                <option value="">Select type</option>
                 <option value="italian">Italian</option>
                 <option value="mexican">Mexican</option>
                 <option value="asian">Asian</option>
                 <option value="middle-eastern">Middle Eastern</option>
+                <option value="indian">indian</option>
+                <option value="coffee">coffee</option>
+                <option value="sweets">sweets</option>
+
+
             </select>
 
             <!-- Location -->
-            <select name="location" required>
+            <select name="location">
                 <option value="">Select Location</option>
                 <option value="Amsterdam">Amsterdam</option>
                 <option value="denhaag">Den Haag</option>
@@ -86,7 +91,9 @@
         <section class="LeftSection">
             <h3>just trying for now</h3>
             <p> <em>Eating out can be expensive, but with a little planning, you can enjoy delicious meals without
-                    breaking the bank.</em></p>
+                    breaking the bank. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vel ipsum quo.
+                    Harum repudiandae placeat est quae, et tenetur, autem vero neque quos fugit tempora maiores
+                    blanditiis architecto cumque ex.</em></p>
         </section>
 
 
@@ -95,7 +102,7 @@
         </aside>
     </section>
 
-    <hr class="divider">
+
 
     <section class="container">
         <section class="RightSection">
@@ -110,26 +117,7 @@
         </aside>
     </section>
 
-    <p> what is the food you like the most ??</p>
-    <ul class="ul">
-        <li>Pizza</li>
-        <li>Burgers</li>
-        <li>Asian Cuisine</li>
-        <li>Mexican Food</li>
-        <li>Italian Food</li>
-        <li>Indian Food</li>
-        <li>French Food??!! Come on! are u serious ??</li>
-    </ul>
-
-    <article>
-
-        <figure class="figure">
-            <img src="img/food1.jpg" alt="food image" title="i'm Hungry ahh" class="center-img">
-            <figcaption>EetsMakelijk</figcaption>
-        </figure>
-        <p>Finding the best meals within your budget doesn’t mean sacrificing flavor.</p>
-
-    </article>
+    <hr class="divider">
 
     <table class="prices">
         <tr>
@@ -153,6 +141,32 @@
             <td>from $8</td>
         </tr>
     </table>
+
+
+    <section class="container">
+        <p> what is the food you like the most ??</p>
+        <ul class="ul">
+            <li>Pizza</li>
+            <li>Burgers</li>
+            <li>Asian Cuisine</li>
+            <li>Mexican Food</li>
+            <li>Italian Food</li>
+            <li>Indian Food</li>
+            <li>French Food??!! Come on! are u serious ??</li>
+        </ul>
+    </section>
+
+    <article>
+
+        <figure class="figure">
+            <img src="img/food1.jpg" alt="food image" title="i'm Hungry ahh" class="center-img">
+            <figcaption>EetsMakelijk</figcaption>
+        </figure>
+        <p>Finding the best meals within your budget doesn’t mean sacrificing flavor.</p>
+
+    </article>
+
+
 
 
 
